--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 				</div>
 
 				<div class="col-xl-2">
-					<h3><strong>How CRISPR is used</strong></h3>
-					<p>CRISPR is a complex system that deals with DNA. In short, proteins of T-RNA find certain segments of DNA and the CAS-9 protein cuts it out. CrRNA then replaces it with a different natural mutation or segment. Scientists can now tell T-RNA what to find and CrRNA what it should be replaced with. The CRISPR CAS-9 systems is found in any organism.</p>
+					<h3><strong>Sample Text</strong></h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt, nisi non finibus venenatis, odio elit fringilla sapien, vitae porta nulla velit eget nisl. Nam gravida ac massa vel blandit. Fusce tempor sollicitudin dapibus. Proin eget venenatis est. Quisque lobortis imperdiet ipsum nec iaculis. Morbi suscipit a lacus sed egestas. Maecenas id urna in ex euismod sagittis. Morbi condimentum dui id ex facilisis, auctor molestie velit efficitur. Vivamus sit amet neque eu lectus dapibus porta non eget nibh.</p>
 				</div>
 
 				<div class="col-xl-2">
