--- a/mythbusting.html
+++ b/mythbusting.html
@@ -67,7 +67,7 @@
 
 			<div class="row justify-content-center q-a"> 
 				<div class="col-xl-5">
-					<h4>Pesticides used with GMO foods are much worse than old pesticides</h4>
+					<h4>Myth: Pesticides used with GMO foods are much worse than old pesticides</h4>
 
 					<p>Some People may thing that GMOs increase pesticde usage by the need to care for the plant more. In fact, the plant makes its own pesticides, they are no-harmful to humans. It is only harmful to bugs and pests. GMO foods are actually more safe from a pesticide perspective as they require less use of pesticides since they modified to be more resistant and also produce more of their own.</p>
 				</div>
@@ -85,9 +85,9 @@
 				</div>
 
 				<div class="col-xl-5">
-					<h4>What the jiminy crickets did you just flaming say about me, you little bozo?</h4>
+					<h4>Myth: Modifying plants in a lab is more dangerous than doing it “naturally”</h4>
 
-					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+					<p>Genetically modifying food in the lab by changing DNA is done by inducing change in the offspring of the mother plant. This is the same as how evolution works in nature, the process is just sped up in the lab. You can look at the domestication of corn as an example. Corn was domesticated through hundreds of years of humans picking and planting the offspring of the plant with the most product. This can lead a small plant with very little yield to produce a large yield.</p>
 				</div>
 			</div>
 
@@ -95,9 +95,9 @@
 			
 			<div class="row justify-content-center q-a"> 
 				<div class="col-xl-5">
-					<h4>there is a heading 4 and a paragraph tag here</h4>
+					<h4>Myth: GMOs cause cancer</h4>
 
-					<p></p>
+					<p>Sadly no, GMOs do not cause cancer. This fact has been independently verified by numerous studies, and this is a common “fact” thrown around to try and discredit GMOs, and create a negative stigma around them.</p>
 				</div>
 
 				<div class="col-xl-3">
