--- a/info.html
+++ b/info.html
@@ -57,7 +57,7 @@
 
 			<div class="row justify-content-center q-a"> 
 				<div class="col-xl-4">
-					<h4>How CRISPR is used</h4>
+					<h4>What is CRISPR?</h4>
 
 					<p>CRISPR is a complex system that deals with DNA. In short, proteins of T-RNA find certain segments of DNA and the CAS-9 protein cuts it out. CrRNA then replaces it with a different natural mutation or segment. Scientists can now tell T-RNA what to find and CrRNA what it should be replaced with. The CRISPR CAS-9 systems is found in any organism.</p>
 
