--- a/about-us.html
+++ b/about-us.html
@@ -74,21 +74,18 @@
 					<img src="img\phil.png" class="team-member-photo">
 					<h4 class="p-2">Jerry Wang</h3>
 					<h6 class="">President</h6>	
-					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face.</p>
 				</div>
 
 				<div class="col-md-4 col-xl-3">	
 					<img src="img\phil.png" class="team-member-photo">
 					<h4 class="p-2">Mark Cieslewicz</h3>
 					<h6 class="">Vice President of Information Technology</h6>
-					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face.</p>	
 				</div>
 
 				<div class="col-md-4 col-xl-3">	
 					<img src="img\phil.png" class="team-member-photo">
 					<h4 class="p-2">Kasper Jankowski</h3>
 					<h6 class="">Vice President of Marketing and Sales</h6>
-					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face.</p>	
 				</div>
 			</div>
 
@@ -96,23 +93,21 @@
 
 				<div class="col-md-4 col-xl-3">	
 					<img src="img\phil.png" class="team-member-photo">
-					<h4 class="p-2">Mark Cieslewicz</h3>
-					<h6 class="">Vice President of Finance</h6>
-					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face.</p>	
+					<h4 class="p-2">Jerry Wang</h3>
+					<h6 class="">Vice President of Finance</h6>	
 				</div>
 
 				<div class="col-md-4 col-xl-3">	
 					<img src="img\phil.png" class="team-member-photo">
 					<h4 class="p-2">Masood Latif</h3>
 					<h6 class="">Vice President of Production</h6>
-					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face.</p>	
 				</div>
 
 				<div class="col-md-4 col-xl-3">	
 					<img src="img\phil.png" class="team-member-photo">
 					<h4 class="p-2">Quinn "Autist" Sikorski</h3>
 					<h6 class="">Vice President of Human Resources</h6>
-					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face.</p>	
+						
 				</div>				
 			</div>
 		</div>
