--- a/about-us.html
+++ b/about-us.html
@@ -105,7 +105,7 @@
 
 				<div class="col-md-4 col-xl-3">	
 					<img src="img\phil.png" class="team-member-photo">
-					<h4 class="p-2">Quinn "Autist" Sikorski</h3>
+					<h4 class="p-2">Quinn Sikorski</h3>
 					<h6 class="">Vice President of Human Resources</h6>
 						
 				</div>				
