Add images everywhere except general info

--- a/about-us.html
+++ b/about-us.html
@@ -71,19 +71,19 @@
 			<h3 class="p-1">Our Team</h3>
 			<div class="row p-md-5 justify-content-center">
 				<div class="col-md-4 col-xl-3">	
-					<img src="img\phil.png" class="team-member-photo">
+					<img src="img\Jerry-President.jpg" class="team-member-photo">
 					<h4 class="p-2">Jerry Wang</h3>
 					<h6 class="">President</h6>	
 				</div>
 
 				<div class="col-md-4 col-xl-3">	
-					<img src="img\phil.png" class="team-member-photo">
+					<img src="img\Mark.PNG" class="team-member-photo">
 					<h4 class="p-2">Mark Cieslewicz</h3>
 					<h6 class="">Vice President of Information Technology</h6>
 				</div>
 
 				<div class="col-md-4 col-xl-3">	
-					<img src="img\phil.png" class="team-member-photo">
+					<img src="img\Casper.jpg" class="team-member-photo">
 					<h4 class="p-2">Kasper Jankowski</h3>
 					<h6 class="">Vice President of Marketing and Sales</h6>
 				</div>
@@ -92,19 +92,19 @@
 			<div class="row p-md-5 justify-content-center">
 
 				<div class="col-md-4 col-xl-3">	
-					<img src="img\phil.png" class="team-member-photo">
+					<img src="img\Jerry-Finance.jpg" class="team-member-photo">
 					<h4 class="p-2">Jerry Wang</h3>
 					<h6 class="">Vice President of Finance</h6>	
 				</div>
 
 				<div class="col-md-4 col-xl-3">	
-					<img src="img\phil.png" class="team-member-photo">
+					<img src="img\Masood.jpg" class="team-member-photo">
 					<h4 class="p-2">Masood Latif</h3>
 					<h6 class="">Vice President of Production</h6>
 				</div>
 
 				<div class="col-md-4 col-xl-3">	
-					<img src="img\phil.png" class="team-member-photo">
+					<img src="img\Quinn.PNG" class="team-member-photo">
 					<h4 class="p-2">Quinn Sikorski</h3>
 					<h6 class="">Vice President of Human Resources</h6>
 						
