--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		</div>
 
 		<div class="container-fluid" id="banner">
-			<img src="img/larg.png" style="max-width: 1600px;">
+			<img src="img/canvas.jpg" style="max-width: 1600px;">
 		</div>
 
 		<div class="container-fluid pt-5">
