--- a/mythbusting.html
+++ b/mythbusting.html
@@ -22,6 +22,14 @@
 	</head>
 	
 	<body>
+
+		<style type="text/css">
+			img {
+				max-height: 300px;
+				max-width: 450px;
+			}
+
+		</style>
 		<div id="main-navbar-wrapper">
 			<nav class="navbar main-navbar navbar-expand-md navbar-light affix" id="main-navbar" data-toggle="collapse" data-target="main-navbar-nav">
 				<div class="container-fluid text-left">
@@ -73,15 +81,15 @@
 				</div>
 
 				<div class="col-xl-3">
-					<img src="img/suffer.png">
+					<img src="img/mb1.jpg">
 				</div>
 			</div>
 
 			<br>
 
 			<div class="row justify-content-center q-a"> 
-				<div class="col-xl-3">
-					<img src="img/suffer.png">
+				<div class="col-xl-4">
+					<img src="img/mb2.jpg">
 				</div>
 
 				<div class="col-xl-5">
@@ -101,7 +109,7 @@
 				</div>
 
 				<div class="col-xl-3">
-					<img src="img/suffer.png">
+					<img src="img/mb3.jpg">
 				</div>
 			</div>
 
@@ -109,7 +117,7 @@
 
 			<div class="row justify-content-center q-a"> 
 				<div class="col-xl-3">
-					<img src="img/suffer.png">
+					<img src="img/mb4.jpg">
 				</div>
 
 				<div class="col-xl-5">
@@ -120,35 +128,6 @@
 			</div>
 
 			<br>
-			
-			<div class="row justify-content-center q-a"> 
-				<div class="col-xl-5">
-					<h4>there is a heading 4 and a paragraph tag here</h4>
-
-					<p></p>
-				</div>
-
-				<div class="col-xl-3">
-					<img src="img/suffer.png">
-				</div>
-			</div>
-
-			<br>
-
-			<div class="row justify-content-center q-a"> 
-				<div class="col-xl-3">
-					<img src="img/suffer.png">
-				</div>
-
-				<div class="col-xl-5">
-					<h4>What the jiminy crickets did you just flaming say about me, you little bozo?</h4>
-
-					<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
-				</div>
-			</div>
-
-			<br>
-
 
 
 		
