--- a/mythbusting.html
+++ b/mythbusting.html
@@ -105,7 +105,7 @@
 				<div class="col-xl-5">
 					<h4>Myth: GMOs cause cancer</h4>
 
-					<p>Sadly no, GMOs do not cause cancer. This fact has been independently verified by numerous studies, and this is a common “fact” thrown around by uninformed people to try and discredit GMOs, and create a negative stigma around them.</p>
+					<p>No, GMOs do not cause cancer. This fact has been independently verified by numerous studies, and this is a common “fact” thrown around by uninformed people to try and discredit GMOs, and create a negative stigma around them.</p>
 				</div>
 
 				<div class="col-xl-3">
