--- a/about-us.html
+++ b/about-us.html
@@ -77,7 +77,7 @@
 				</div>
 
 				<div class="col-md-4 col-xl-3">	
-					<img src="img\Mark.PNG" class="team-member-photo">
+					<img src="img\Mark.png" class="team-member-photo">
 					<h4 class="p-2">Mark Cieslewicz</h3>
 					<h6 class="">Vice President of Information Technology</h6>
 				</div>
