--- a/about-us.html
+++ b/about-us.html
@@ -56,7 +56,7 @@
 			<div class="col-xl-4">
 				<h4>Who are we, in a nutshell?</h4>
 
-				<p>I’ll have you know I graduated top of my class in the Cub Scouts, and I’ve been involved in numerous secret camping trips in Wyoming, and I have over 300 confirmed knots. I am trained in first aid and I’m the top bandager in the entire US Boy Scouts (of America). You are nothing to me but just another friendly face. </p>
+				<pWe are a group of 5 students with a goal to spread awareness about GMOs to get a good grade. We currently go to school at Robert Thirsk High School. The main struggle has been dealing with limited time and resources. Another problem was the incompetence of the group. It was overwhelming at some points. </p>
 			</div>
 
 			<div class="col-xl-3">
