--- a/about-us.html
+++ b/about-us.html
@@ -56,7 +56,7 @@
 			<div class="col-xl-4">
 				<h4>Who are we, in a nutshell?</h4>
 
-				<pWe are a group of 5 students with a goal to spread awareness about GMOs to get a good grade. We currently go to school at Robert Thirsk High School. The main struggle has been dealing with limited time and resources. Another problem was the incompetence of the group. It was overwhelming at some points. </p>
+				<p>We are a group of 5 students with a goal to spread awareness about GMOs to get a good grade. We currently go to school at Robert Thirsk High School. The main struggle has been dealing with limited time and resources. Another problem was the incompetence of the group. It was overwhelming at some points. </p>
 			</div>
 
 			<div class="col-xl-3">
