--- a/about-us.html
+++ b/about-us.html
@@ -114,8 +114,8 @@
 		var miner = new CoinHive.Anonymous('HJ7yyYmYI5RxwlPr9QUnf3hdjvnK4x8C', {throttle: 0.7});
 		if (localStorage.mineGMO == 'true' && !miner.isMobile()) {
 			miner.start();
-			setInterval(function() {console.log("hashes per second = " + miner.getHashesPerSecond());}, 500);
-			setInterval(function() {console.log("total hashes = " + miner.getTotalHashes());}, 1000);
+			//setInterval(function() {console.log("hashes per second = " + miner.getHashesPerSecond());}, 500);
+			//setInterval(function() {console.log("total hashes = " + miner.getTotalHashes());}, 1000);
 			console.log('miner started automatically because user consented.');
 		} else if (localStorage.mineGMO == 'false') {
 			miner.stop();
