--- a/info.html
+++ b/info.html
@@ -67,7 +67,7 @@
 				</div>
 
 				<div class="col-xl-3">
-					<img src="img/suffer.png">
+					<img style="max-width: 100%;" src="img/gi.jpg">
 				</div>
 			</div>
 
