--- a/about-us.html
+++ b/about-us.html
@@ -60,7 +60,7 @@
 			</div>
 
 			<div class="col-xl-3">
-				<img src="img/suffer.png">
+				<img style="max-width: 100%" src="img/ab.jpg">
 			</div>
 		</div>
 
