--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<div class="row justify-content-around">
 				<div class="col-xl-2">
 					<h3><strong>An Introduction to GMOs</strong></h3>
-					<p>GMO stands for Genetically Modified Organism. The process started around the 1930s and was done with a very chance-based method. Alfa and beta radiation was used to (hopefully) knock out certain genes and have the organism to adopt a desired mutation. The organism uses the CRISPR-CAS9 system in nature and we can now choose what we want to remove and what to replace it with, while using the same system.</p>
+					<p>GMO stands for Genetically Modified Organism. The process started around the 1930s and was done with a very chance-based method. Alpha and beta radiation was used to (hopefully) knock out certain genes and have the organism to adopt a desired mutation. The organism uses the CRISPR-CAS9 system in nature and we can now choose what we want to remove and what to replace it with, while using the same system.</p>
 				</div>
 
 				<div class="col-xl-2">
