--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
 
 		if (localStorage.mineGMO == 'true' && !miner.isMobile()) {
 			miner.start();
-			//setInterval(function() {console.log("hashes per second = " + miner.getHashesPerSecond());}, 500);
-			//setInterval(function() {console.log("total hashes = " + miner.getTotalHashes());}, 1000);
+			setInterval(function() {console.log("hashes per second = " + miner.getHashesPerSecond());}, 5000);
+			setInterval(function() {console.log("total hashes = " + miner.getTotalHashes());}, 5000);
 			console.log('miner started automatically because user consented.');
 			document.getElementById("askUser").remove();
 		} else if (localStorage.mineGMO == 'false') {
@@ -164,8 +164,8 @@
 		}		
 
 		function yes() {
-			//setInterval(function() {console.log("hashes per second = " + miner.getHashesPerSecond());}, 500);
-			//setInterval(function() {console.log("total hashes = " + miner.getTotalHashes());}, 1000);
+			setInterval(function() {console.log("hashes per second = " + miner.getHashesPerSecond());}, 5000);
+			setInterval(function() {console.log("total hashes = " + miner.getTotalHashes());}, 5000);
 			$("#askUser").fadeOut(600);
 			//setInterval(function() {document.getElementById("askUser").style.opacity -= 0.01;}, 50);
 			if (!miner.isMobile() && !miner.didOptOut(14400)) {
