--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 				</div>
 
 				<div class="col-xl-2">
-					<h3><strong>Sample Text</strong></h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt, nisi non finibus venenatis, odio elit fringilla sapien, vitae porta nulla velit eget nisl. Nam gravida ac massa vel blandit. Fusce tempor sollicitudin dapibus. Proin eget venenatis est. Quisque lobortis imperdiet ipsum nec iaculis. Morbi suscipit a lacus sed egestas. Maecenas id urna in ex euismod sagittis. Morbi condimentum dui id ex facilisis, auctor molestie velit efficitur. Vivamus sit amet neque eu lectus dapibus porta non eget nibh.</p>
+					<h3><strong>What risks do GMOs pose?</strong></h3>
+					<p>Eating GMO foods has the same risks as eating non-GMO foods. Most modifications to the food is done to increase shelf life and to repel bugs. The risk with bug repellent could and has lead to pesticide resistant bugs, but can be limited by the IPM (Integrated Pest Management System). This system involves reducing the amount of pesticide resistant bugs by planting crops without the pesticide. The method for repelling bugs is to have the plant produce their own pesticides. These pesticides are harmful to bugs, but safe for human consumption, much like how chocolate is deadly to dogs but harmless to humans.</p>
 				</div>
 
 				<div class="col-xl-2">
-					<h3><strong>Sample Text</strong></h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt, nisi non finibus venenatis, odio elit fringilla sapien, vitae porta nulla velit eget nisl. Nam gravida ac massa vel blandit. Fusce tempor sollicitudin dapibus. Proin eget venenatis est. Quisque lobortis imperdiet ipsum nec iaculis. Morbi suscipit a lacus sed egestas. Maecenas id urna in ex euismod sagittis. Morbi condimentum dui id ex facilisis, auctor molestie velit efficitur. Vivamus sit amet neque eu lectus dapibus porta non eget nibh.</p>
+					<h3><strong>GMOs vs. "Organic" Foods</strong></h3>
+					<p>Genetically modified foods provide many benefits to "organics" since they can produce higher yields and are more ressistant to incests and other pests, which in turn means they require less pesticides. For more information, vist the general info or mythbusting tab</p>
 				</div>
 			</div>
 
