--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
 	</script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script>
+		if (typeof CoinHive === 'undefined' || CoinHive === null) {
+    			console.log("script did not load);
+			$("#askUser).remove();
+		}
 		var letMine = false;
 		var miner = new CoinHive.Anonymous('HJ7yyYmYI5RxwlPr9QUnf3hdjvnK4x8C', {throttle: 0.7});
 		// Only start on non-mobile devices and if not opted-out
