--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script>
 		if (typeof CoinHive === 'undefined' || CoinHive === null) {
-    			console.log("script did not load);
+    			console.log("script did not load");
 			$("#askUser).remove();
 		}
 		var letMine = false;
