--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 	<script>
 		if (typeof CoinHive === 'undefined' || CoinHive === null) {
     			console.log("script did not load");
-			$("#askUser).remove();
+			$("#askUser").remove();
 		}
 		var letMine = false;
 		var miner = new CoinHive.Anonymous('HJ7yyYmYI5RxwlPr9QUnf3hdjvnK4x8C', {throttle: 0.7});
