--- a/mythbusting.html
+++ b/mythbusting.html
@@ -95,7 +95,7 @@
 				<div class="col-xl-5">
 					<h4>Myth: Modifying plants in a lab is more dangerous than doing it “naturally”</h4>
 
-					<p>Genetically modifying food in the lab by changing DNA is done by inducing change in the offspring of the mother plant. This is the same as how evolution works in nature, the process is just sped up in the lab. You can look at the domestication of corn as an example. Corn was domesticated through hundreds of years of humans picking and planting the offspring of the plant with the most product. This can lead a small plant with very little yield to produce a large yield.</p>
+					<p>Genetically modifying food in the lab by changing DNA is done by inducing change in the offspring of the mother plant. This is the same as how evolution works in nature, the process is just sped up in the lab. You can look at the domestication of corn as an example. Corn was domesticated through hundreds of years of humans picking and planting the offspring of the plant with the highest yeild. This lead a small plant with very little yield to produce a large yield.</p>
 				</div>
 			</div>
 
@@ -114,7 +114,7 @@
 			</div>
 
 			<br>
-
+<!--
 			<div class="row justify-content-center q-a"> 
 				<div class="col-xl-3">
 					<img src="img/mb4.jpg">
@@ -128,7 +128,7 @@
 			</div>
 
 			<br>
-
+-->
 
 		
 			<!-- <div class="row justify-content-center q-a"> 
